chore: refactored both front-end to work with pageables and pagination
