# frontend-beer-frontier/src/app/api/models/index.ts
@@ -3,3 +3,6 @@
 export * from './Beer';
 export * from './Brewery';
 export * from './Classification';
+export * from './PageBeer';
+export * from './PageableObject';
+export * from './SortObject';
